[package]
name = "blockkey"
version = "0.1.0"
authors = ["Miles Watson <contact@mileswatson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
data-encoding = "2.3.2"
ed25519-dalek = { version = "1.0.1", features = [ "serde" ] }
im-rc = "15.0.0"
rand = "0.7.3"
serde = { version = "1.0.126", features = [ "derive" ] }
serde_json = "1.0.64"
sha2 = "0.9.5"
structopt = "0.3.22"
tendermint = "0.21.0"
tendermint-abci = "0.21.0"
tendermint-proto = "0.21.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
