[package]
name = "blockkey"
version = "0.1.0"
authors = ["Miles Watson <contact@mileswatson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "1.6.1"
async-trait = "0.1.51"
data-encoding = "2.3.2"
ed25519-dalek = { version = "1", features = [ "serde" ] }
futures = "0.3.15"
im-rc = "15.0.0"
itertools = "0.10.1"
libp2p = {version = "0.37.1", features = [ "tcp-tokio", "dns-tokio" ] }
rand = "0.7.3"
serde = { version = "1.0.126", features = [ "derive" ] }
serde_json = "1.0.67"
sha2 = "0.9.5"
tokio = { version="1.6.0", features = [ "full", "rt" ] }
