[package]
name = "blockkey"
version = "0.1.0"
authors = ["Miles Watson <contact@mileswatson.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
data-encoding = "2.3.2"
ed25519-dalek = { version = "1.0.1", features = [ "serde" ] }
futures = "0.3.17"
im-rc = "15.0.0"
itertools = "0.10.1"
libp2p = {version = "0.39.1", features = [ "tcp-tokio", "dns-tokio" ] }
rand = "0.8.4"
serde = { version = "1.0.130", features = [ "derive" ] }
serde_json = "1.0.68"
sha2 = "0.9.8"
tokio = { version="1.12.0", features = [ "full", "rt" ] }
